tests/rosetta/transpiler/C/babylonian-spiral.c
// Generated by Mochi 0.10.32 on 2025-07-27 18:13 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <malloc.h>

size_t push_len;
size_t positions_len;
size_t *positions_lens;

static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(int v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%d", v);
    return strdup(buf);
}

typedef struct { const char **keys; const char **vals; size_t len; } MapSS;

static int map_get_si(const char *keys[], const int vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return 0;
}

static const char* map_get_ss(const char *keys[], const char *vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return "";
}

static int* list_append_int(int *arr, size_t *len, int val) {
    arr = realloc(arr, (*len + 1) * sizeof(int));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static int** list_append_intptr(int **arr, size_t *len, int *val) {
    arr = realloc(arr, (*len + 1) * sizeof(int*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static size_t* list_append_szt(size_t *arr, size_t *len, size_t val) {
    arr = realloc(arr, (*len + 1) * sizeof(size_t));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    struct mallinfo mi = mallinfo();
    return (long long)mi.uordblks;
}

static int* _slice_int(const int *arr, size_t len, int start, int end, size_t *out_len) {
    if (start < 0) start = 0;
    if ((size_t)end > len) end = len;
    if (start > end) start = end;
    size_t n = end - start;
    int *res = NULL;
    if (n) {
        res = malloc(n * sizeof(int));
        memcpy(res, arr + start, n * sizeof(int));
    }
    *out_len = n;
    return res;
}

typedef struct Anon1 Anon1;
typedef struct Anon2 Anon2;

struct Anon1 {
    int s;
    int a;
    int b;
};

struct Anon2 {
    int *d;
    size_t d_len;
    int *heap;
    size_t heap_len;
    int n;
};

int * push(int * h, size_t h_len, int it);
Anon2 step(int * h, size_t h_len, int nv, int * dir, size_t dir_len);
int * * positions(int n);
const char* pad(const char* s, int w);
int user_main();
int main(void);

int * push(int * h, size_t h_len, int it) {
    h = list_append_int(h, &h_len, it);
    int i = h_len - 1;
    while ((i > 0) && (h[i - 1]["s"] > h[i]["s"])) {
        int tmp = h[i - 1];
        h[i - 1] = h[i];
        h[i] = tmp;
        i = i - 1;
    }
    return push_len = h_len, h;
}

Anon2 step(int * h, size_t h_len, int nv, int * dir, size_t dir_len) {
    while ((h_len == 0) || ((nv * nv) <= h[0]["s"])) {
        h = push(h, h_len, (Anon1){.s = nv * nv, .a = nv, .b = 0});
        h_len = push_len;
        nv = nv + 1;
    }
    int s = h[0]["s"];
    int **v = NULL;
    size_t v_len = 0;
    size_t *v_lens = NULL;
    size_t v_lens_len = 0;
    while ((h_len > 0) && (h[0]["s"] == s)) {
        int it = h[0];
        h = _slice_int(h, h_len, 1, h_len, &(h_len));
        v = list_append_intptr(v, &v_len, ({int *tmp = malloc(2 * sizeof(int)); tmp[0] = map_get_si(it_keys, it_vals, it_len, "a"); tmp[1] = map_get_si(it_keys, it_vals, it_len, "b"); tmp;}));
        v_lens = list_append_szt(v_lens, &v_lens_len, 2);
        if (map_get_si(it_keys, it_vals, it_len, "a") > map_get_si(it_keys, it_vals, it_len, "b")) {
            h = push(h, h_len, (Anon1){.s = (map_get_si(it_keys, it_vals, it_len, "a") * map_get_si(it_keys, it_vals, it_len, "a")) + ((map_get_si(it_keys, it_vals, it_len, "b") + 1) * (map_get_si(it_keys, it_vals, it_len, "b") + 1)), .a = map_get_si(it_keys, it_vals, it_len, "a"), .b = map_get_si(it_keys, it_vals, it_len, "b") + 1});
            h_len = push_len;
        }
    }
    int **list = NULL;
    size_t list_len = 0;
    size_t *list_lens = NULL;
    size_t list_lens_len = 0;
    for (size_t __i = 0; __i < v_len; __i++) {
        int p = v_keys[__i];
        list = list_append_intptr(list, &list_len, p);
        list_lens = list_append_szt(list_lens, &list_lens_len, p_len);
    }
    int **temp = list;
    size_t temp_len = list_len;
    size_t *temp_lens = list_lens;
    size_t temp_lens_len = list_len;
    for (size_t __i = 0; __i < temp_len; __i++) {
        int p = temp_keys[__i];
        if (p[0] != p[1]) {
            list = list_append_intptr(list, &list_len, ({int *tmp = malloc(2 * sizeof(int)); tmp[0] = p[1]; tmp[1] = p[0]; tmp;}));
            list_lens = list_append_szt(list_lens, &list_lens_len, 2);
        }
    }
    temp = list;
    for (size_t __i = 0; __i < temp_len; __i++) {
        int p = temp_keys[__i];
        if (p[1] != 0) {
            list = list_append_intptr(list, &list_len, ({int *tmp = malloc(2 * sizeof(int)); tmp[0] = p[0]; tmp[1] = -(p[1]); tmp;}));
            list_lens = list_append_szt(list_lens, &list_lens_len, 2);
        }
    }
    temp = list;
    for (size_t __i = 0; __i < temp_len; __i++) {
        int p = temp_keys[__i];
        if (p[0] != 0) {
            list = list_append_intptr(list, &list_len, ({int *tmp = malloc(2 * sizeof(int)); tmp[0] = -(p[0]); tmp[1] = p[1]; tmp;}));
            list_lens = list_append_szt(list_lens, &list_lens_len, 2);
        }
    }
    int bestDot = -999999999;
    int *best = dir;
    size_t best_len = dir_len;
    for (size_t __i = 0; __i < list_len; __i++) {
        int p = list_keys[__i];
        int cross = (p[0] * dir[1]) - (p[1] * dir[0]);
        if (cross >= 0) {
            int dot = (p[0] * dir[0]) + (p[1] * dir[1]);
            if (dot > bestDot) {
                bestDot = dot;
                best = p;
            }
        }
    }
    return (Anon2){.d = best, .d_len = best_len, .heap = h, .heap_len = h_len, .n = nv};
}

int * * positions(int n) {
    int **pos = NULL;
    size_t pos_len = 0;
    size_t *pos_lens = NULL;
    size_t pos_lens_len = 0;
    int x = 0;
    int y = 0;
    int dir[2] = {0, 1};
    size_t dir_len = 2;
    int *heap = NULL;
    size_t heap_len = 0;
    int nv = 1;
    int i = 0;
    while (i < n) {
        pos = list_append_intptr(pos, &pos_len, ({int *tmp = malloc(2 * sizeof(int)); tmp[0] = x; tmp[1] = y; tmp;}));
        pos_lens = list_append_szt(pos_lens, &pos_lens_len, 2);
        Anon2 st = step(heap, heap_len, nv, dir, dir_len);
        dir = st.d;
        heap = st.heap;
        nv = st.n;
        x = x + dir[0];
        y = y + dir[1];
        i = i + 1;
    }
    return positions_lens = pos_lens, positions_len = pos_len, pos;
}

const char* pad(const char* s, int w) {
    const char* r = s;
    while (strlen(r) < w) {
        r = str_concat(r, " ");
    }
    return r;
}

int user_main() {
    int **pts = positions(40);
    size_t pts_len = positions_len;
    size_t *pts_lens = positions_lens;
    size_t pts_lens_len = positions_len;
    puts("The first 40 Babylonian spiral points are:");
    const char* line = "";
    int i = 0;
    while (i < pts_len) {
        int *p = pts[i];
        size_t p_len = pts_lens[i];
        const char* s = pad(str_concat(str_concat(str_concat(str_concat("(", str_int(p[0])), ", "), str_int(p[1])), ")"), 10);
        line = str_concat(line, s);
        if (((i + 1) % 10) == 0) {
            puts(line);
            line = "";
        }
        i = i + 1;
    }
}

int main(void) {
    {
        long long __start = _now();
        long long __mem_start = _mem();
        user_main();
        long long __end = _now();
        long long __mem_end = _mem();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = __mem_end - __mem_start;
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
